# Snail-FFmpeg

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: config.sh  module.sh
script/: compile_3rd_party_Android.sh  compile_3rd_party_iOS.sh  compile_3rd_party_pc.sh  compile_ffmpeg_Android.sh  compile_ffmpeg_iOS.sh  compile_ffmpeg_pc.sh  init.sh
script/tools/: do_fdk_aac_Android.sh  do_fdk_aac_iOS.sh  do_fdk_aac_pc.sh  do_ffmpeg_Android.sh  do_ffmpeg_iOS.sh  do_ffmpeg_pc.sh  do_ios_toolchain.sh  do_ios_toolchain_clean.sh  do_lame_Android.sh  do_lame_iOS.sh  do_lame_pc.sh  do_ndk_toolchain.sh  do_ndk_toolchain_clean.sh  do_pc_toolchain.sh  do_pc_toolchain_clean.sh  do_x264_Android.sh  do_x264_iOS.sh  do_x264_pc.sh
